Add some constants tables and start work on gear sets.

--- a/RotationSimulator/MainWindow.xaml
+++ b/RotationSimulator/MainWindow.xaml
@@ -93,6 +93,11 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
@@ -103,22 +108,77 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <TextBlock  Grid.Row="0" Grid.Column="0" Margin="5,5,5,5">Critical Hit</TextBlock>
-                    <TextBox x:Name="tb_critical" Grid.Row="0" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">2938</TextBox>
-                    <TextBlock  Grid.Row="1" Grid.Column="0" Margin="5,5,5,5">Direct Hit Rate</TextBlock>
-                    <TextBox x:Name="tb_directHit" Grid.Row="1" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">3221</TextBox>
-                    <TextBlock  Grid.Row="2" Grid.Column="0" Margin="5,5,5,5">Determination Bonus</TextBlock>
-                    <TextBox x:Name="tb_determination" Grid.Row="2" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">2524</TextBox>
-                    <TextBlock  Grid.Row="3" Grid.Column="0" Margin="5,5,5,5">Skill Speed</TextBlock>
-                    <TextBox x:Name="tb_skillspeed" Grid.Row="3" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">380</TextBox>
-                    <TextBlock  Grid.Row="4" Grid.Column="0" Margin="5,5,5,5">Spell Speed</TextBlock>
-                    <TextBox x:Name="tb_spellspeed" Grid.Row="4" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">380</TextBox>
-                    <TextBlock  Grid.Row="5" Grid.Column="0" Margin="5,5,5,5">Tenacity</TextBlock>
-                    <TextBox x:Name="tb_tenacity" Grid.Row="5" Grid.Column="1" Margin="5,5,5,5" MinWidth="100" IsEnabled="False">NOT IMPLEMENTED</TextBox>
-                    <TextBlock  Grid.Row="6" Grid.Column="0" Margin="5,5,5,5">Piety</TextBlock>
-                    <TextBox x:Name="tb_piety" Grid.Row="6" Grid.Column="1" Margin="5,5,5,5" MinWidth="100" IsEnabled="False">NOT IMPLEMENTED</TextBox>
+
+                    <TextBlock  Grid.Row="0" Grid.Column="2" Margin="5,5,5,5">Class</TextBlock>
+                    <ComboBox Grid.Row="0" Grid.Column="3" Margin="5,5,5,5" x:Name="cb_gearClass" SelectedIndex="0" SelectionChanged="cb_gearClass_SelectionChanged">
+                        <ComboBoxItem>PLD</ComboBoxItem>
+                        <ComboBoxItem>WAR</ComboBoxItem>
+                        <ComboBoxItem>DRK</ComboBoxItem>
+                        <ComboBoxItem>GNB</ComboBoxItem>
+                        <ComboBoxItem>WHM</ComboBoxItem>
+                        <ComboBoxItem>SCH</ComboBoxItem>
+                        <ComboBoxItem>AST</ComboBoxItem>
+                        <!--ComboBoxItem>SGE</ComboBoxItem-->
+                        <ComboBoxItem>MNK</ComboBoxItem>
+                        <ComboBoxItem>DRG</ComboBoxItem>
+                        <ComboBoxItem>NIN</ComboBoxItem>
+                        <ComboBoxItem>SAM</ComboBoxItem>
+                        <!--ComboBoxItem>RPR</ComboBoxItem-->
+                        <ComboBoxItem>BRD</ComboBoxItem>
+                        <ComboBoxItem>MCH</ComboBoxItem>
+                        <ComboBoxItem>DNC</ComboBoxItem>
+                        <ComboBoxItem>BLM</ComboBoxItem>
+                        <ComboBoxItem>SMN</ComboBoxItem>
+                        <ComboBoxItem>RDM</ComboBoxItem>
+                    </ComboBox>
+                    <TextBlock  Grid.Row="1" Grid.Column="2" Margin="5,5,5,5">Strength</TextBlock>
+                    <TextBox x:Name="tb_strength" Grid.Row="1" Grid.Column="3" Margin="5,5,5,5" MinWidth="100">2938</TextBox>
+                    <TextBlock  Grid.Row="2" Grid.Column="2" Margin="5,5,5,5">Dexterity</TextBlock>
+                    <TextBox x:Name="tb_dexterity" Grid.Row="2" Grid.Column="3" Margin="5,5,5,5" MinWidth="100">2938</TextBox>
+                    <TextBlock  Grid.Row="3" Grid.Column="2" Margin="5,5,5,5">Intelligence</TextBlock>
+                    <TextBox x:Name="tb_intelligence" Grid.Row="3" Grid.Column="3" Margin="5,5,5,5" MinWidth="100">2938</TextBox>
+                    <TextBlock  Grid.Row="4" Grid.Column="2" Margin="5,5,5,5">Mind</TextBlock>
+                    <TextBox x:Name="tb_mind" Grid.Row="4" Grid.Column="3" Margin="5,5,5,5" MinWidth="100">2938</TextBox>
+
+                    <!--TextBlock  Grid.Row="0" Grid.Column="4" Margin="5,5,5,5" ToolTip="Race/class selection not yet implemented.">Race/Clan</TextBlock>
+                    <ComboBox Grid.Row="0" Grid.Column="5" Margin="5,5,5,5" x:Name="cb_gearRace" SelectedIndex="0" IsEnabled="False">
+                        <ComboBoxItem>Hyur - Midlander</ComboBoxItem>
+                        <ComboBoxItem>Hyur - Highlander</ComboBoxItem>
+                        <ComboBoxItem>Elezen - Wildwood</ComboBoxItem>
+                        <ComboBoxItem>Elezen - Duskwight</ComboBoxItem>
+                        <ComboBoxItem>Lalafell - Plainsfolk</ComboBoxItem>
+                        <ComboBoxItem>Lalafell - Dunesfolk</ComboBoxItem>
+                        <ComboBoxItem>Miqo'te - Seekers of the Sun</ComboBoxItem>
+                        <ComboBoxItem>Miqo'te - Keepers of the Moon</ComboBoxItem>
+                        <ComboBoxItem>Roegadyn - Sea Wolves</ComboBoxItem>
+                        <ComboBoxItem>Roegadyn - Hellsguard</ComboBoxItem>
+                        <ComboBoxItem>Au Ra - Raen</ComboBoxItem>
+                        <ComboBoxItem>Au Ra - Xaela</ComboBoxItem>
+                        <ComboBoxItem>Hrothgar - Helions</ComboBoxItem>
+                        <ComboBoxItem>Hrothgar - The Lost</ComboBoxItem>
+                        <ComboBoxItem>Viera - Rava</ComboBoxItem>
+                        <ComboBoxItem>Viera - Veena</ComboBoxItem>
+                    </ComboBox-->
+                    <TextBlock  Grid.Row="1" Grid.Column="4" Margin="5,5,5,5">Critical Hit</TextBlock>
+                    <TextBox x:Name="tb_critical" Grid.Row="1" Grid.Column="5" Margin="5,5,5,5" MinWidth="100">2938</TextBox>
+                    <TextBlock  Grid.Row="2" Grid.Column="4" Margin="5,5,5,5">Direct Hit Rate</TextBlock>
+                    <TextBox x:Name="tb_directHit" Grid.Row="2" Grid.Column="5" Margin="5,5,5,5" MinWidth="100">3221</TextBox>
+                    <TextBlock  Grid.Row="3" Grid.Column="4" Margin="5,5,5,5">Determination Bonus</TextBlock>
+                    <TextBox x:Name="tb_determination" Grid.Row="3" Grid.Column="5" Margin="5,5,5,5" MinWidth="100">2524</TextBox>
+                    <TextBlock  Grid.Row="4" Grid.Column="4" Margin="5,5,5,5">Skill Speed</TextBlock>
+                    <TextBox x:Name="tb_skillspeed" Grid.Row="4" Grid.Column="5" Margin="5,5,5,5" MinWidth="100">380</TextBox>
+                    <TextBlock  Grid.Row="5" Grid.Column="4" Margin="5,5,5,5">Spell Speed</TextBlock>
+                    <TextBox x:Name="tb_spellspeed" Grid.Row="5" Grid.Column="5" Margin="5,5,5,5" MinWidth="100">380</TextBox>
+                    <TextBlock  Grid.Row="6" Grid.Column="4" Margin="5,5,5,5">Tenacity</TextBlock>
+                    <TextBox x:Name="tb_tenacity" Grid.Row="6" Grid.Column="5" Margin="5,5,5,5" MinWidth="100" IsEnabled="False">NOT IMPLEMENTED</TextBox>
+                    <TextBlock  Grid.Row="7" Grid.Column="4" Margin="5,5,5,5">Piety</TextBlock>
+                    <TextBox x:Name="tb_piety" Grid.Row="7" Grid.Column="5" Margin="5,5,5,5" MinWidth="100" IsEnabled="False">NOT IMPLEMENTED</TextBox>
                 </Grid>
             </TabItem>
             <TabItem Header="Options">
