--- a/RotationSimulator/MainWindow.xaml
+++ b/RotationSimulator/MainWindow.xaml
@@ -177,8 +177,23 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
@@ -186,10 +201,43 @@
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <TextBlock  Grid.Row="0" Grid.Column="0" Margin="5,5,5,5">Simulate Trick Attack</TextBlock>
-                    <CheckBox x:Name="cb_opt_simulateTrickAttack" Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="True"></CheckBox>
+                    <TextBlock  Grid.Row="0" Grid.Column="0" Margin="5,5,5,5">Basic Options</TextBlock>
                     <TextBlock  Grid.Row="1" Grid.Column="0" Margin="5,5,5,5" ToolTip="Put your estimated ping here. Animation locks are ping dependent, and this is used to adjust them. Default is 100. Values under 10 will be treated as 10.">Ping</TextBlock>
                     <TextBox x:Name="tb_opt_ping" Grid.Row="1" Grid.Column="1" Margin="5,5,5,5" MinWidth="100">100</TextBox>
+
+
+                    <TextBlock Grid.Row="0" Grid.Column="2" Margin="5,5,5,5">Party Composition (For Buffs)</TextBlock>
+                    
+                    <TextBlock  Grid.Row="1" Grid.Column="2" Margin="5,5,5,5" ToolTip="Cards are not simulated.">AST: Divination</TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateDivination" Grid.Row="1" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="True"></CheckBox>
+                    
+                    <TextBlock  Grid.Row="2" Grid.Column="2" Margin="5,5,5,5" ToolTip="Assumes wanderer->mage->army with army's cut short." Text="BRD: Songs &amp; Battle Voice"></TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateBardBuffs" Grid.Row="2" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="false"></CheckBox>
+
+                    <TextBlock  Grid.Row="3" Grid.Column="2" Margin="5,5,5,5" Text="DNC: Tech Finish"></TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateTechnicalStep" Grid.Row="3" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="True"></CheckBox>
+                    <TextBlock  Grid.Row="4" Grid.Column="2" Margin="5,5,5,5" Text="DNC: Dance Partner"></TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateDancePartner" Grid.Row="4" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="false"></CheckBox>
+
+                    <TextBlock  Grid.Row="5" Grid.Column="2" Margin="5,5,5,5" Text="DRG: Battle Litany"></TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateBattleLitany" Grid.Row="5" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="false"></CheckBox>
+                    <TextBlock  Grid.Row="6" Grid.Column="2" Margin="5,5,5,5" Text="DRG: Tether (Dragon Sight) Partner"></TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateDragoonTether" Grid.Row="6" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="false"></CheckBox>
+
+                    <TextBlock  Grid.Row="7" Grid.Column="2" Margin="5,5,5,5" Text="MNK: Brotherhood"></TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateBrotherhood" Grid.Row="7" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="false"></CheckBox>
+
+                    <TextBlock  Grid.Row="8" Grid.Column="2" Margin="5,5,5,5">NIN: Trick Attack</TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateTrickAttack" Grid.Row="8" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="True"></CheckBox>
+
+                    <TextBlock  Grid.Row="9" Grid.Column="2" Margin="5,5,5,5" Text="RDM: Embolden"></TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateEmbolden" Grid.Row="9" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="true"></CheckBox>
+                    
+                    <TextBlock  Grid.Row="10" Grid.Column="2" Margin="5,5,5,5" Text="SCH: Chain Stratagem"></TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateChainStrat" Grid.Row="10" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="false"></CheckBox>
+                    
+                    <TextBlock  Grid.Row="11" Grid.Column="2" Margin="5,5,5,5" Text="SMN: Searing Light"></TextBlock>
+                    <CheckBox x:Name="cb_opt_simulateSearingLight" Grid.Row="11" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" IsChecked="false"></CheckBox>
                 </Grid>
             </TabItem>
         </TabControl>
