Split simulation into 3 modes. One for doing an average run, one for a single pass with RNG, and a third that runs 10000 times and averages the results. Also sneakily fixed that passive class traits for damage were not applied.

--- a/RotationSimulator/MainWindow.xaml
+++ b/RotationSimulator/MainWindow.xaml
@@ -23,14 +23,24 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
+                    
                     <Button x:Name="button" Content="Run Simulation" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Click="button_Simulate"/>
+
                     <TextBlock Grid.Row="1" Grid.Column="0" Margin="5,5,5,5">Selected Rotation</TextBlock>
-                    <ComboBox x:Name="cb_simulationRotationSelection" IsEditable="False" Grid.Row="2" Grid.Column="0" Margin="5,5,5,5" SelectionChanged="cb_simulationRotationSelection_Changed" MinWidth="150">
+                    <ComboBox x:Name="cmb_simulationModeSelection" IsEditable="False" Grid.Row="2" Grid.Column="0" Margin="5,5,5,5" SelectionChanged="cmb_simulationMode_Changed" MinWidth="150" SelectedIndex="0">
+                        <ComboBoxItem ToolTip="Runs a single pass with no RNG of any kind. Good for classes without random elements. Not compatible with those that have random procs.">Simple</ComboBoxItem>
+                        <ComboBoxItem ToolTip="Do a single run. DPS result can be misleading due to crit, direct hit, and proc RNG.">Single Pass</ComboBoxItem>
+                        <ComboBoxItem ToolTip="Do thousands of runs with full randomness to determine average DPS and variance. Detailed logging for each run not available.">Variation Analysis</ComboBoxItem>
                     </ComboBox>
-                    <TextBlock Grid.Row="3" Grid.Column="0" Margin="5,5,5,5">Selected Gearset</TextBlock>
-                    <ComboBox IsEditable="False" Grid.Row="4" Grid.Column="0" Margin="5,5,5,5" x:Name="cb_simulationGearsetSelection" SelectionChanged="cb_simulationGearsetSelection_Changed" MinWidth="150">
+                    <TextBlock Grid.Row="3" Grid.Column="0" Margin="5,5,5,5">Selected Rotation</TextBlock>
+                    <ComboBox x:Name="cb_simulationRotationSelection" IsEditable="False" Grid.Row="4" Grid.Column="0" Margin="5,5,5,5" SelectionChanged="cb_simulationRotationSelection_Changed" MinWidth="150">
+                    </ComboBox>
+                    <TextBlock Grid.Row="5" Grid.Column="0" Margin="5,5,5,5">Selected Gearset</TextBlock>
+                    <ComboBox IsEditable="False" Grid.Row="6" Grid.Column="0" Margin="5,5,5,5" x:Name="cb_simulationGearsetSelection" SelectionChanged="cb_simulationGearsetSelection_Changed" MinWidth="150">
                     </ComboBox>
                     
 
@@ -45,7 +55,9 @@
                         <TextBlock x:Name="tb_logOutput" Margin="5,5,5,5"><InlineUIContainer><Image Source="pack://application:,,,/images/icons/mch_detonator.png" /></InlineUIContainer>lol</TextBlock>
                     </ScrollViewer>
 
-                    <TextBlock x:Name="textBlock" Grid.Row="1" Grid.Column="2" Grid.RowSpan="4" HorizontalAlignment="Left" Text="(simulation basic output)" TextWrapping="Wrap" VerticalAlignment="Top" MinWidth="150" Margin="5,5,5,5"/>
+
+                    <TextBlock Grid.Row="0" Grid.Column="2" Grid.RowSpan="4" HorizontalAlignment="Left" Text="Results" TextWrapping="Wrap" VerticalAlignment="Top" MinWidth="150" Margin="15,5,5,5" FontSize="24"/>
+                    <TextBlock x:Name="textBlock" Grid.Row="1" Grid.Column="2" Grid.RowSpan="4" HorizontalAlignment="Left" Text="(simulation basic output)" TextWrapping="Wrap" VerticalAlignment="Top" MinWidth="150" Margin="15,5,5,5"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Rotation Editor">
